revno: 22551 message:   CSS fixes, z-index, dashboard
committer: Lars Helge Overland <lars@dhis2.org>
branch nick: dhis2
timestamp: Wed 2016-03-30 19:13:37 +0200

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/green/green.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/green/green.css
@@ -57,7 +57,7 @@ input[type=text],input[type=password],input[type=email],textarea
   background-color: #467e4a;
   height: 44px;
   position: fixed;
-  z-index: 15;
+  z-index: 1100;
   top: 0px;
   left: 0px;
   right: 0px;
