--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/india/india.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/india/india.css
@@ -57,7 +57,7 @@ input[type=text],input[type=password],input[type=email],textarea
   background-color: #ea5911;
   height: 44px;
   position: fixed;
-  z-index: 10;
+  z-index: 1100;
   top: 0px;
   left: 0px;
   right: 0px;
