--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/myanmar/myanmar.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/myanmar/myanmar.css
@@ -57,7 +57,7 @@ input[type=text],input[type=password],input[type=email],textarea
   background-color: #276696;
   height: 44px;
   position: fixed;
-  z-index: 15;
+  z-index: 1100;
   top: 0;
   left: 0;
   right: 0;
