--- a/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/style/dashboard.css
+++ b/dhis-2/dhis-web/dhis-web-dashboard-integration/src/main/webapp/dhis-web-dashboard-integration/style/dashboard.css
@@ -241,7 +241,7 @@
   padding-bottom: 4px;
   background-color: #fff;
   display: none;
-  z-index: 5;
+  z-index: 1001;
   box-shadow: #ccc 0 1px 2px 0;
 }
 
@@ -680,6 +680,15 @@ div#selectionTree
 }
 
 /*----------------------------------------------------------------------------*/
+/* jQuery overrides                                                           */
+/*----------------------------------------------------------------------------*/
+
+.ui-widget
+{
+  z-index: 1001 !important;
+}
+
+/*----------------------------------------------------------------------------*/
 /* Print style                                                                */
 /*----------------------------------------------------------------------------*/
 
@@ -707,20 +716,4 @@ div#selectionTree
   width: 960px;
 }
 
-}
-
-/*----------------------------------------------------------------------------*/
-/* Map plugin (Leaflet) specific z-index overrides                            */
-/*----------------------------------------------------------------------------*/
-
-/* dhis2 theme css */
-#header
-{
-  z-index: 1100;
-}
-
-/* jQuery ui css */
-.ui-front
-{
-  z-index: 1101;
 }
